terraform/bastion.tf
resource "aws_key_pair" "bastion_key" {
    key_name   = var.key_name
    public_key = file("${path.module}/../.ssh/bastionkey.pub") 
}

data "aws_ami" "ubuntu" {
  most_recent = true
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  owners = ["099720109477"]
}

resource "aws_instance" "bastion" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public.id
  associate_public_ip_address = true
  key_name                    = var.key_name
  vpc_security_group_ids      = [aws_security_group.bastion_sg.id]

  # Runs on first boot
  user_data = file("${path.module}/../cloud-init/monitoring.sh")

  tags = {
    Name = "bastion-host"
  }
}
